package project.rest.client.code;

public class SQLRequests {

    // SQL Requests
    public static final String SQL_CREATE_DATABASE = "CREATE DATABASE ?";
    public static final String SQL_CREATE_TABLE = "CREATE TABLE ? (%)";
    public static final String SQL_INSERT = "INSERT INTO ? VALUES(%)";

}
