package project.rest.client.code;

public class StaticInfo {

    // Response Messages
    public static final String dbDefault = "localhost:3306/";
    public static final String dbPrefix = "jdbc:mysql://";
    public static final String errorDBMissing = "No Database Selected";
    public static final String noTargetDefined = "No Target Defined";
    public static final String tokenMissing = "Token Missing";
    public static final String unableToLoadURI = "Unable To Load URI";

}
